<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_subnet_calculator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SubnetCalculatorActivity">

    <EditText
        android:id="@+id/edittext_ip"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:padding="10sp"
        android:layout_marginTop="100sp"
        android:background="@drawable/edittext_borders"
        android:maxLines="1"
        android:maxLength="15"
        android:inputType="number"
        android:digits=".0123456789"
        android:hint="@string/string_edittext_ip"
        android:imeOptions="actionNext"/>

    <EditText
        android:id="@+id/edittext_mask"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:padding="10sp"
        android:layout_marginTop="10sp"
        android:background="@drawable/edittext_borders"
        android:maxLines="1"
        android:maxLength="15"
        android:inputType="number"
        android:digits=".0123456789"
        android:imeOptions="actionDone"
        android:hint="@string/string_edittext_mask"
        android:layout_below="@id/edittext_ip"/>
    <Button
        android:id="@+id/button_calculate"
        android:layout_width="150sp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20sp"
        android:backgroundTint="@color/black"
        android:text="@string/string_button_calculate"
        android:layout_below="@id/edittext_mask"/>

    <TextView
        android:id="@+id/textview_result"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20sp"
        android:padding="10sp"
        android:text="@string/string_textview_result"
        android:textColor="@color/gray"
        android:layout_below="@id/button_calculate"
        android:background="@drawable/edittext_borders"/>

    <Button
        android:id="@+id/button_back"
        android:layout_width="150sp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100sp"
        android:backgroundTint="@color/black"
        android:text="@string/string_button_back"
        android:layout_below="@id/textview_result"/>


</RelativeLayout>