<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_strong_password_generator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StrongPasswordGeneratorActivity">

    <Spinner
        android:id="@+id/spinner_password_length"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10sp"
        android:layout_marginTop="100sp"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/button_generate"
        android:layout_width="150sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/black"
        android:text="@string/string_button_generate"
        android:layout_below="@id/spinner_password_length"/>

    <TextView
        android:id="@+id/textview_result"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20sp"
        android:padding="10sp"
        android:textIsSelectable="true"
        android:text="@string/string_textview_result"
        android:textColor="@color/gray"
        android:layout_below="@id/button_generate"
        android:background="@drawable/edittext_borders"/>

    <Button
        android:id="@+id/button_back"
        android:layout_width="150sp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100sp"
        android:backgroundTint="@color/black"
        android:text="@string/string_button_back"
        android:layout_below="@id/textview_result"/>

</RelativeLayout>